Fix headline responsiveness issue on mobile

--- a/style.css
+++ b/style.css
@@ -96,10 +96,6 @@ body {
   margin-top: 62px;
 }
 
-.menu-icon-container img {
-  width: 12px;
-}
-
 .mobile-menu-container ul {
   display: flex;
   flex-direction: column;
@@ -136,12 +132,18 @@ body {
 
 /* Headline */
 .headline-container {
-  background-image: url(images/header-shapes\ mobile@2x.svg);
+  background-image: url(images/Header\ bg.svg);
   background-repeat: no-repeat;
   background-color: #fff;
   font-family: 'Poppins', sans-serif;
-  padding: 114px 24px 12px 24px;
+  padding: 70px 40px;
   border-radius: 0 0 0 50px;
+  background-size: contain;
+  background-position: center;
+  margin-top: 60px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 0 0 0 100px;
 }
 
 .headline-greeting {
